Fix screen height not 100% on mobile landscape view

--- a/version-2/css/main.css
+++ b/version-2/css/main.css
@@ -16,7 +16,7 @@
   background-size: cover;
   background-position: center;
   height: 100vh;
-  min-height: 600px;
+  /* min-height: 600px; */
   color: white;
   position: relative;
 }
@@ -35,7 +35,7 @@
 }
 
 .main-header .showcase {
-  padding-top: 110px;
+  padding-top: 15vh;
 }
 
 .showcase h1 {
